[project]
name = "buoy-barn"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "E", # pycodestyle
    # "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F", # flakes
    # "FURB", # refurb
    "I", # import sorting
    "ICN", # flake8-import-conventions
    # "G", # flake8-logging-format
    # "LOG", # flake8-logging
    "NPY", # numpy
    "PD", # pandas-vet
    "PERF", # perflint
    "PL",  # pylint
    "PTH", # flake8-pathlib
    # "RUF", # ruff specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP", # upgrade
    "W", # pycodestyle
]

[tool.ruff.lint.isort]
known-first-party = [
    "deployments",
    "forecasts",
]
