[project]
name = "buoy-barn"
version = "0.9.0"
description = "NERACOOS lightweight API sitting in front of ERDDAP"
authors = [ { name = "Alex Kerney", email = "<akerney@gmri.org>" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "celery~=5.4",
  "dj-control-room[all]>=1.2",
  "django~=6.0",
  "django-cors-headers~=4.4",
  "django-debug-toolbar~=6.0",
  "django-health-check~=4.3.0",
  "django-memoize~=2.3.1",
  "django-object-actions~=5.0",
  "django-redis~=6.0",
  "djangorestframework~=3.15",
  "djangorestframework-gis~=1.0",
  "erddapy>1.2.1",
  "flower~=2.0.1",
  "freezegun~=1.5.1",
  "geojson~=3.2.0",
  "granian~=2.7",
  "httpx~=0.28",
  "netcdf4~=1.7.1",
  "paho-mqtt>=2.1",
  "pandas>1.5.3",
  "psycopg2-binary~=2.9.9",
  "pystac~=1.14.1",
  "requests>=2.33",
  "scipy>=1.14.1",
  "sentry-sdk~=2.58.0",
  "slack-sdk~=3.41.0",
  "vcrpy~=8.0",
  "whitenoise~=6.7",
  "xarray~=2026.4.0",
]

[dependency-groups]
dev = [
  "ipython~=9.11",
  "pytest~=9.0",
  "pytest-cov~=7.0",
  "pytest-django~=4.8",
  "pyyaml~=6.0",
]

[tool.uv]
exclude-newer = "7 days"
